alignments and other issues resolved

--- a/src/assets/scss/pages_scss/invoice/invoice.scss
+++ b/src/assets/scss/pages_scss/invoice/invoice.scss
@@ -3,10 +3,10 @@
 .supplier-container {
     padding: 24px;
     font-family: 'Inter-Regular', sans-serif;
-    height: 100%;
+    height: 100vh;
 
     .supplier-content-wrapper {
-        height: 100%;
+        height: 100vh;
 
         .v-data-table {
             .v-toolbar {
@@ -37,7 +37,8 @@
                 box-shadow: none !important;
     
                 .v-data-table__wrapper {
-                    max-height: calc(100vh - 235px);
+                    // min-height: calc(100vh -235);
+                    max-height: 50vh;
                     overflow-y: auto;
                     overflow-x: hidden;
     
@@ -65,7 +66,7 @@
                                 }
     
                                 td {
-                                    padding: 15px 20px;
+                                    padding: 5px 20px;
                                     color: $default-text-color;
                                     cursor: pointer;
                                     border-bottom: 1px solid $light-border !important;
